--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^9.12.1",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-firebaseui": "^6.0.0"
   },
   "devDependencies": {
-    "@types/node": "18.11.5",
-    "@types/react": "18.0.22",
+    "@types/node": "^18.11.5",
+    "@types/react": "^18.0.23",
     "@types/react-dom": "18.0.7",
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
-    "typescript": "4.8.4"
+    "typescript": "^4.8.4"
   }
 }
